<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="781dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/bg_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/opensaucebold"
        android:text="Pilih Jenis Layanan Ambulans"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/frameLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:text="@string/ambulans1"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/ambulans1"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_ambulans"
        android:layout_marginTop="12dp"
        android:paddingStart="40dp"
        android:fontFamily="@font/opensaucesemibold"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:text="@string/ambulans2"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/ambulans2"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_ambulans"
        android:paddingStart="40dp"
        android:fontFamily="@font/opensaucesemibold"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:text="@string/ambulans3"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/ambulans3"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_ambulans"
        android:paddingStart="40dp"
        android:fontFamily="@font/opensaucesemibold"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view1"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginBottom="1109dp"
        android:background="@color/black"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tunai"
            android:layout_marginStart="28dp"
            android:drawableEnd="@drawable/btnharga"
            android:textColor="@color/red"
            android:background="@android:color/transparent"
            android:textAllCaps="false"

            android:fontFamily="@font/opensaucebold"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/textHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="310dp"
            android:text="Gratis"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/opensaucebold"
            android:textSize="22sp"/>
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNext"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:text="Proses Sekarang"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/red"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/opensaucesemibold"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>